[package]
name = "canopydb"
version = "0.2.4"
authors = ["arthurprs <arthurprs@gmail.com>"]
edition = "2021"
description = "Transactional key-value storage engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/arthurprs/canopydb"
keywords = ["database", "storage-engine", "embedded-database", "key-value"]
categories = ["data-structures", "database-implementations", "algorithms"]
exclude = ["fuzz/", "assets/"]

[features]
default = []
# default = ["nightly"]
# default = ["shuttle"]
shuttle = ["dep:shuttle", "dep:rand_08"]
nightly = []

[dependencies]
foldhash = "0.2"
bitflags = "2"
dashmap = "=7.0.0-rc2"
derive_more = { version = "2", features = [
    "debug",
    "deref",
    "deref_mut",
    "display",
    "error",
] }
fail = "0.5"
# pending https://github.com/brunoczim/fslock/pull/17, but only relevant for miri tests
fslock = { git = "https://github.com/arthurprs/fslock.git", rev = "7ec91154136a2b3d567b1f79e87cae5d3ca3d927", version = "0.2" }
quick_cache = { version = "0.6.11", default-features = false, features = [
    "parking_lot",
] }
smallvec = { version = "=2.0.0-alpha.12" }
lock_api = { version = "0.4", features = ["arc_lock"] }
log = "0.4"
tempfile = "3.16"
triomphe = { version = "0.1.14", default-features = false }
lz4_flex = { version = "0.12", default-features = false, features = ["std"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = { version = "0.9" }
rand_08 = { package = "rand", version = "0.8", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
shuttle = { version = "0.8", optional = true }
hashbrown = "0.15"
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["fs", "mman"] }
libc = { version = "0.2" }

[profile.test]
opt-level = 1

[profile.release]
debug = true
# overflow-checks = true
# debug-assertions = true

[profile.bench]
debug = true
# overflow-checks = false
# debug-assertions = false

[profile.shuttle]
inherits = "test"
opt-level = 3

[dev-dependencies]
env_logger = "0.11"
proptest = "1"
rand = { version = "0.9", features = ["small_rng"] }
sysinfo = { version = "0.34", default-features = false, features = ["system"] }

[profile.dev.package."lz4_flex"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
